--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -254,6 +254,26 @@ In Gradle 9.0, referencing tasks or other domain objects using the `"name"()` sy
 
 Instead of using `"name"()` to reference a task or domain object, use `named("name")` or one of the other supported notations.
 
+[[removed_project_exec]]
+==== Removed deprecated `Project#exec`, `Project#javaexec` and their script counterparts
+
+Some helper methods to run external processes were <<#deprecated_project_exec, deprecated in Gradle 8.11>> and are removed in Gradle 9.0:
+
+* `org.gradle.apiProject#exec(Closure)`
+* `org.gradle.apiProject#exec(Action)`
+* `org.gradle.apiProject#javaexec(Closure)`
+* `org.gradle.apiProject#javaexec(Action)`
+* `org.gradle.api.Script#exec(Closure)`
+* `org.gradle.api.Script#exec(Action)`
+* `org.gradle.api.Script#javaexec(Closure)`
+* `org.gradle.api.Script#javaexec(Action)`
+* `org.gradle.kotlin.dsl.InitScriptApi#exec(Action)`
+* `org.gradle.kotlin.dsl.InitScriptApi#javaexec(Action)`
+* `org.gradle.kotlin.dsl.KotlinScript#exec(Action)`
+* `org.gradle.kotlin.dsl.KotlinScript#javaexec(Action)`
+* `org.gradle.kotlin.dsl.SettingsScriptApi#exec(Action)`
+* `org.gradle.kotlin.dsl.SettingsScriptApi#javaexec(Action)`
+
 ==== Plugins written with the Kotlin DSL require Gradle >= 8.11 by default
 
 When building and publishing plugins using the Kotlin DSL on Gradle 9.x, those plugins will only be usable on Gradle 8.11 or newer.
