--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_7.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_7.adoc
@@ -1762,9 +1762,9 @@ configurations {
 ==== Deprecated custom source set interfaces
 The following source set interfaces are now deprecated and scheduled for removal in Gradle 8.0:
 
-- link:{javadocPath}/org/gradle/api/tasks/GroovySourceSet.html[GroovySourceSet]
+- `org.gradle.api.tasks.GroovySourceSet`
 - `org.gradle.api.plugins.antlr.AntlrSourceVirtualDirectory` (removed)
-- link:{javadocPath}/org/gradle/api/tasks/ScalaSourceSet.html[ScalaSourceSet]
+- `org.gradle.api.tasks.ScalaSourceSet`
 
 Clients should configure the sources with their plugin-specific configuration:
 
